--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   display: flex;
   flex-direction: column;
   background-color: #f3f3f3;
-  min-height: 100%;
+  height: 100%;
 }
 #footer {
   background-color: #444;
@@ -118,7 +118,7 @@ nav h1 a {
   background: blue none repeat scroll 0 0;
   width: 100%;
 }
-@media (min-width:660px)  { 
+@media (min-width:700px)  { 
   #maincontent-top > #map-container, #maincontent-top > #map-container > #map {
     height: 660px;
   }
@@ -166,13 +166,14 @@ nav h1 a {
     display: flex;
     flex-grow: 1;
   }
+}
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
   padding: 30px 15px 60px;
-  text-align: center;
+  align-items: center;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
