--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,6 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
   background-color: #3397DB;
   align-items: center;
   flex-grow: 1;
@@ -149,7 +148,7 @@ nav h1 a {
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
-  width: 90px;
+  width: 90%;
 }
 .column {
   height: 100%;
@@ -174,6 +173,7 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   align-items: center;
+  text-align: center;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
